// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test switch color and size 1`] = `
"<div class=\\"var-switch\\">
  <div class=\\"var-switch-block\\" style=\\"height: 18px; width: 30px;\\">
    <div style=\\"height: 10.799999999999999px; width: 28px; border-radius: 10px; filter: opacity(.6); background-color: indigo;\\" class=\\"var-switch__track var-switch__track-active\\"></div>
    <div class=\\"var-switch__ripple\\" style=\\"left: 7.5px; color: indigo; width: 30px; height: 30px;\\">
      <div style=\\"width: 15px; height: 15px; background-color: indigo;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
        <!--v-if-->
      </div>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test switch color and size 2`] = `
"<div class=\\"var-switch\\">
  <div class=\\"var-switch-block\\" style=\\"height: 18px; width: 30px;\\">
    <div style=\\"height: 10.799999999999999px; width: 28px; border-radius: 10px; filter: brightness(.6); background-color: rgb(137, 221, 255);\\" class=\\"var-switch__track\\"></div>
    <div class=\\"var-switch__ripple\\" style=\\"left: -7.5px; color: rgb(137, 221, 255); width: 30px; height: 30px;\\">
      <div style=\\"width: 15px; height: 15px; background-color: rgb(137, 221, 255);\\" class=\\"var-switch__handle var-elevation--2\\">
        <!--v-if-->
      </div>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test switch example 1`] = `
"<div>
  <div class=\\"app-type\\">基本使用</div>
  <div class=\\"var-switch__example-block\\">
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
          <div style=\\"width: 20px; height: 20px;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
            <!--v-if-->
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
</div>
<div>
  <div class=\\"app-type\\">不可用</div>
  <div class=\\"var-switch__example-block\\">
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block var-switch__disable\\" style=\\"height: 24px; width: 40px;\\">
        <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
          <div style=\\"width: 20px; height: 20px;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
            <!--v-if-->
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
          <div style=\\"width: 20px; height: 20px;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
            <!--v-if-->
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
</div>
<div>
  <div class=\\"app-type\\">自定义颜色</div>
  <div class=\\"var-switch__example-block\\">
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: brightness(.6);\\" class=\\"var-switch__track\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: -10px; color: rgb(153, 153, 153); width: 40px; height: 40px;\\">
          <div style=\\"width: 20px; height: 20px;\\" class=\\"var-switch__handle var-elevation--2\\">
            <!--v-if-->
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: brightness(.6); background-color: rgb(137, 221, 255);\\" class=\\"var-switch__track\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: -10px; color: rgb(137, 221, 255); width: 40px; height: 40px;\\">
          <div style=\\"width: 20px; height: 20px; background-color: rgb(137, 221, 255);\\" class=\\"var-switch__handle var-elevation--2\\">
            <!--v-if-->
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: brightness(.6); background-color: rgb(39, 114, 245);\\" class=\\"var-switch__track\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: -10px; color: rgb(39, 114, 245); width: 40px; height: 40px;\\">
          <div style=\\"width: 20px; height: 20px; background-color: rgb(39, 114, 245);\\" class=\\"var-switch__handle var-elevation--2\\">
            <!--v-if-->
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
</div>
<div>
  <div class=\\"app-type\\">不同大小</div>
  <div class=\\"var-switch__example-block\\">
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 18px; width: 30px;\\">
        <div style=\\"height: 10.799999999999999px; width: 28px; border-radius: 10px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 7.5px; width: 30px; height: 30px;\\">
          <div style=\\"width: 15px; height: 15px;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
            <!--v-if-->
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
          <div style=\\"width: 20px; height: 20px;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
            <!--v-if-->
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 30px; width: 50px;\\">
        <div style=\\"height: 18px; width: 48px; border-radius: 16.666666666666668px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 12.5px; width: 50px; height: 50px;\\">
          <div style=\\"width: 25px; height: 25px;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
            <!--v-if-->
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
</div>
<div>
  <div class=\\"app-type\\">加载状态</div>
  <div class=\\"var-switch__example-block\\">
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
          <div style=\\"width: 20px; height: 20px;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
            <div class=\\"var--box var-loading\\">
              <div class=\\"var-loading__circle\\"><span class=\\"var-loading__circle-block\\" style=\\"width: 16px; height: 16px;\\"><svg viewBox=\\"25 25 50 50\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"20\\" fill=\\"none\\"></circle></svg></span></div>
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 30px; width: 50px;\\">
        <div style=\\"height: 18px; width: 48px; border-radius: 16.666666666666668px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 12.5px; width: 50px; height: 50px;\\">
          <div style=\\"width: 25px; height: 25px;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
            <div class=\\"var--box var-loading\\">
              <div class=\\"var-loading__circle\\"><span class=\\"var-loading__circle-block\\" style=\\"width: 21px; height: 21px;\\"><svg viewBox=\\"25 25 50 50\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"20\\" fill=\\"none\\"></circle></svg></span></div>
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 30px; width: 50px;\\">
        <div style=\\"height: 18px; width: 48px; border-radius: 16.666666666666668px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 12.5px; width: 50px; height: 50px;\\">
          <div style=\\"width: 25px; height: 25px; color: rgb(255, 152, 0);\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
            <div class=\\"var--box var-loading\\">
              <div class=\\"var-loading__circle\\"><span class=\\"var-loading__circle-block\\" style=\\"width: 21px; height: 21px;\\"><svg viewBox=\\"25 25 50 50\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"20\\" fill=\\"none\\"></circle></svg></span></div>
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
</div>
<div>
  <div class=\\"app-type\\">值的校验</div>
  <div class=\\"var-cell\\" style=\\"padding: 0px; align-items: flex-start;\\">
    <!--v-if-->
    <div class=\\"var-cell__content\\">
      <div class=\\"var-cell__title\\">
        <div>是否打开开关</div>
      </div>
      <!--v-if-->
    </div>
    <div class=\\"var-cell__extra\\">
      <div class=\\"var-switch\\">
        <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
          <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
          <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
            <div style=\\"width: 20px; height: 20px;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
              <!--v-if-->
            </div>
          </div>
        </div>
        <transition-stub>
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </div>
</div>"
`;

exports[`test switch loading prop 1`] = `
"<div class=\\"var-switch\\">
  <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
    <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
    <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
      <div style=\\"width: 20px; height: 20px; color: rgb(255, 152, 0);\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
        <div class=\\"var--box var-loading\\">
          <div class=\\"var-loading__circle\\"><span class=\\"var-loading__circle-block\\" style=\\"width: 16px; height: 16px;\\"><svg viewBox=\\"25 25 50 50\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"20\\" fill=\\"none\\"></circle></svg></span></div>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test switch rules prop 1`] = `
"<div class=\\"var-switch\\">
  <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
    <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-active\\"></div>
    <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
      <div style=\\"width: 20px; height: 20px;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\">
        <!--v-if-->
      </div>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test switch rules prop 2`] = `
"<div class=\\"var-switch\\">
  <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
    <div style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; filter: opacity(.6);\\" class=\\"var-switch__track var-switch__track-error\\"></div>
    <div class=\\"var-switch__ripple\\" style=\\"left: -10px; width: 40px; height: 40px; color: rgb(153, 153, 153);\\">
      <div style=\\"width: 20px; height: 20px;\\" class=\\"var-switch__handle var-elevation--2 var-switch__handle-error\\">
        <!--v-if-->
      </div>
    </div>
  </div>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__message\\">错误！</div>
      <div class=\\"var-form-details__length\\"></div>
    </div>
  </transition-stub>
</div>"
`;
